@@ -126,3 +126,4 @@
  11-Apr-2019   V0.55 add tree loaders to etl cli tool, add entity_instance_validation, add a variety of counts, add atc codes.
  13-Apr-2019   V0.56 add prototypical json schema properties '_attribute_groups' mapped to subcategory id/labels.
  17-Apr-2019   V0.57/58 schema and cache adjustments for node tree loading
+ 25-Apr-2019   V0.59 adds parent source/host organism and polymer monomer counts
